# packwiz

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  go.mod  go.sum  main.go
cmd/: dependencies.go  fix.go  fix_test.go  init.go  list.go  mod_target.go  modlist.go  packsave.go  pin.go  pin_test.go  refresh.go  rehash.go  remove.go  root.go  serve.go  update.go  validate.go  validate_test.go  validation.go  validation_test.go
cmdshared/: downloadutil.go  mcversion.go  utils.go
core/: deptree.go  deptree_test.go  download.go  hash.go  index.go  interfaces.go  loader_root.go  mod.go  modfix.go  modfix_test.go  modlist.go  modlist_side_test.go  modlist_test.go  pack.go
curseforge/: curseforge.go  detect.go  export.go  export_test.go  import.go  install.go  list.go  metadata.go  open.go  request.go
docs/: commands.md  configuration.md  index.md  modlist.md  packwiz.md  packwiz_completion.md  packwiz_completion_bash.md  packwiz_completion_fish.md  packwiz_completion_powershell.md  packwiz_completion_zsh.md  packwiz_curseforge.md  packwiz_curseforge_add.md  packwiz_curseforge_detect.md  packwiz_curseforge_export.md  packwiz_curseforge_import.md  packwiz_curseforge_open.md  packwiz_dependencies.md  packwiz_dependencies_generate.md  packwiz_init.md  packwiz_list.md  packwiz_migrate.md  packwiz_migrate_loader.md  packwiz_migrate_minecraft.md  packwiz_modlist.md  packwiz_modlist_fix.md  packwiz_modlist_generate.md  packwiz_modlist_validate.md  packwiz_modrinth.md  packwiz_modrinth_add.md  packwiz_modrinth_export.md  packwiz_pin.md  packwiz_refresh.md  (+10 more)
(+28 files in other folders)
